Add no-vars codemod
- Transform `var`s into either `let`s or `const`s depending on if the `var` is mutated.
- Transform `let`s into `const`s if the `let` is never mutated.
- Split variable declaration with multiple declarations into a variable declaration with `let`s and one with `const`s if the declarations contain both mutated and constant variables.

--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "A collection of js transforms using jscodeshift",
   "main": "index.js",
   "scripts": {
-    "test": "mocha",
-    "test-cov": "istanbul cover _mocha && istanbul check-coverage",
-    "test-watch": "mocha --watch --reporter min"
+    "test": "NODE_ENV=test mocha",
+    "cov": "NODE_ENV=test istanbul cover _mocha",
+    "test-cov": "NODE_ENV=test istanbul cover _mocha && istanbul check-coverage",
+    "test-watch": "NODE_ENV=test mocha --watch --reporter min"
   },
   "repository": {
     "type": "git",
